Cleanup jvm arguments